Add lab 2 problem 1

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,7 @@
-<<<<<<< HEAD:.gitignore
 # folders
 .idea/
 out/
+docs/
 
 # file types
 *.iml
-=======
-# folders
-.idea/
-out/
-
-# file types
-*.iml
->>>>>>> f8ce990a40865d43ff5813424a7486572dac9bd7:.gitignore
